--- a/resources/window.ui
+++ b/resources/window.ui
@@ -7,35 +7,84 @@
         <child>
             <object class="GtkBox" id="main_box">
                 <property name="orientation">vertical</property>
-                <property name="spacing">20</property>
-                <property name="margin-top">50</property>
+                <property name="spacing">10</property>
+                <property name="margin-top">10</property>
+                <property name="margin-start">10</property>
+                <property name="margin-end">10</property>
+                <property name="margin-bottom">10</property>
+
+                <!-- Titre -->
                 <child>
-                    <object class="GtkButton" id="ok_button">
+                    <object class="GtkLabel" id="title_label">
+                        <property name="label">YonkOTP</property>
                         <property name="halign">center</property>
-                        <property name="margin-top">20</property>
-                        <property name="width-request">200</property>
-                        <property name="height-request">50</property>
-                        <style>
-                            <class name="green-button"/>  <!-- Nom de classe CSS -->
-                        </style>
+                        <property name="margin-bottom">10</property>
+                        <property name="css-classes">title-label</property>
+                    </object>
+                </child>
+
+                <!-- Barre de recherche et bouton "+ Add" -->
+                <child>
+                    <object class="GtkBox" id="search_bar">
+                        <property name="orientation">horizontal</property>
+                        <property name="spacing">10</property>
                         <child>
-                            <object class="GtkBox">
-                                <property name="orientation">horizontal</property>
-                                <property name="spacing">10</property>
-                                <child>
-                                    <object class="GtkImage">
-                                        <property name="icon-name">list-add</property>  <!-- Icône de croix ➕ -->
-                                    </object>
-                                </child>
-                                <child>
-                                    <object class="GtkLabel">
-                                        <property name="label">Add Key</property>
-                                    </object>
-                                </child>
+                            <object class="GtkEntry" id="search_entry">
+                                <property name="placeholder-text">Search...</property>
+                                <property name="hexpand">true</property>
+                                <property name="css-classes">search-entry</property>
+                            </object>
+                        </child>
+                        <child>
+                            <object class="GtkButton" id="add_button">
+                                <property name="label">+ Add</property>
+                                <property name="css-classes">green-button</property>
                             </object>
                         </child>
                     </object>
                 </child>
+
+                <!-- Liste des OTP -->
+                <child>
+                    <object class="GtkListBox" id="otp_list">
+                        <property name="margin-top">10</property>
+                        <child>
+                            <object class="GtkListBoxRow">
+                                <child>
+                                    <object class="GtkBox">
+                                        <property name="orientation">horizontal</property>
+                                        <property name="spacing">10</property>
+                                        <property name="margin-top">10</property>
+                                        <property name="margin-bottom">10</property>
+                                        <property name="margin-start">10</property>
+                                        <property name="margin-end">10</property>
+                                        <child>
+                                            <object class="GtkLabel">
+                                                <property name="label">Google : Username</property>
+                                                <property name="xalign">0</property>
+                                            </object>
+                                        </child>
+                                        <child>
+                                            <object class="GtkLabel">
+                                                <property name="label">123 456</property>
+                                                <property name="xalign">0.5</property>
+                                                <property name="css-classes">otp-code</property>
+                                            </object>
+                                        </child>
+                                        <child>
+                                            <object class="GtkLabel">
+                                                <property name="label">30</property>
+                                                <property name="xalign">1</property>
+                                            </object>
+                                        </child>
+                                    </object>
+                                </child>
+                            </object>
+                        </child>
+                        <!-- Dupliquer cette section pour plusieurs OTP -->
+                    </object>
+                </child>
+
             </object>
         </child>
     </object>
