--- a/resources/window.ui
+++ b/resources/window.ui
@@ -45,7 +45,7 @@
                         </child>
                     </object>
                 </child>
-
+                
                 <!-- Liste des OTP -->
                 <child>
                     <object class="GtkScrolledWindow">
@@ -54,80 +54,16 @@
                         <child>
                             <object class="GtkListBox" id="otp_list">
                                 <property name="margin-top">10</property>
-
-                                <!-- OTP Item -->
-                                <child>
-                                    <object class="GtkListBoxRow">
-                                        <child>
-                                            <object class="GtkBox">
-                                                <property name="orientation">vertical</property>
-                                                <property name="spacing">5</property>
-                                                <property name="margin-top">10</property>
-                                                <property name="margin-bottom">10</property>
-                                                <property name="margin-start">10</property>
-                                                <property name="margin-end">10</property>
-
-                                                <!-- Première ligne : Nom du service + Timer -->
-                                                <child>
-                                                    <object class="GtkBox">
-                                                        <property name="orientation">horizontal</property>
-                                                        <property name="spacing">10</property>
-
-                                                        <!-- Service -->
-                                                        <child>
-                                                            <object class="GtkLabel">
-                                                                <property name="label">Google : Username</property>
-                                                                <property name="halign">start</property>
-                                                                <property name="css-classes">otp-name</property>
-                                                            </object>
-                                                        </child>
-
-                                                        <!-- Espaceur pour pousser le timer à droite -->
-                                                        <child>
-                                                            <object class="GtkBox">
-                                                                <property name="hexpand">true</property>
-                                                            </object>
-                                                        </child>
-
-                                                        <!-- Timer à droite -->
-                                                        <child>
-                                                            <object class="GtkLabel">
-                                                                <property name="label">30</property>
-                                                                <property name="halign">end</property>
-                                                                <property name="css-classes">otp-timer</property>
-                                                            </object>
-                                                        </child>
-                                                    </object>
-                                                </child>
-                                                <!-- Deuxième ligne : Code OTP -->
-                                                <child>
-                                                    <object class="GtkLabel">
-                                                        <property name="label">123 456</property>
-                                                        <property name="halign">start</property>
-                                                        <property name="css-classes">otp-code</property>
-                                                    </object>
-                                                </child>
-
-                                            </object>
-                                        </child>
-                                    </object>
-                                </child>
-
-                                <!-- Séparateur -->
-                                <child>
-                                    <object class="GtkSeparator"/>
-                                </child>
-
                             </object>
                         </child>
                     </object>
                 </child>
-
+                     
             </object>
         </child>
     </object>
 
-    <!-- Fenêtre modale (CORRECTION) -->
+    <!-- Fenêtre modale -->
     <object class="GtkWindow" id="add_key_window">
         <property name="title">Add New Key</property>
         <property name="default-width">400</property>
